--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@ body{
 
 .hero{
     height: 300px;
-    background-image: url('banner.jpg');
+    background-image: url(banner.jpg);
     background-size: 900px 300px;
     background-repeat: no-repeat;
     background-position: center;
