--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
 }
 
+
 .header{
     background-color:rgb(4, 148, 175);
     color:white;
@@ -11,6 +12,8 @@ body{
     align-items: center;
     height: 70px;
 }
+
+/* Contenedor mientas estudio responsive*/
 
 .container{
     width: 900px;
@@ -21,15 +24,9 @@ body{
     height: inherit;
 }
 
-.logo{
-    display: flex;
-    justify-content: center;
-}
-
-
 /* Menu */
 .menu-btn {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,16 +34,18 @@ body{
     height: 80px;
     cursor: pointer;
     transition: all .5s ease-in-out;
-  }
-  .menu-btn__burger {
+}
+
+.menu-btn__burger {
     width: 50px;
     height: 6px;
     background: #fff;
     border-radius: 5px;
     transition: all .5s ease-in-out;
-  }
-  .menu-btn__burger::before,
-  .menu-btn__burger::after {
+ }
+
+.menu-btn__burger::before,
+.menu-btn__burger::after {
     content: '';
     position: absolute;
     width: 50px;
@@ -54,34 +53,70 @@ body{
     background: #fff;
     border-radius: 5px;
     transition: all .5s ease-in-out;
-  }
-  .menu-btn__burger::before {
+}
+
+.menu-btn__burger::before {
     transform: translateY(-16px);
-  }
-  .menu-btn__burger::after {
+}
+
+.menu-btn__burger::after {
     transform: translateY(16px);
-  }
-  /* Animacion del menu */
-  .menu-btn.open .menu-btn__burger {
+ }
+
+ /* Animacion del menu */
+.menu-btn.open .menu-btn__burger {
     transform: translateX(-50px);
     background: transparent;
     box-shadow: none;
-  }
-  .menu-btn.open .menu-btn__burger::before {
-    transform: rotate(45deg) translate(35px, -35px);
-  }
-  .menu-btn.open .menu-btn__burger::after {
-    transform: rotate(-45deg) translate(35px, 35px);
-  }
-
-  /* prueba para el menu desplegable en lateral */
-
-#list{
-    text-decoration: none;
 }
 
-  /* lo dejare hasta aca por hoy */
+.menu-btn.open .menu-btn__burger::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
 
+.menu-btn.open .menu-btn__burger::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
+
+/*Lista del menu*/
+
+#list{
+    margin: 0 0 0 50px;
+}
+
+#list ul{
+    padding: 4px;
+    transition: 1s;
+}
+
+#list ul li{
+    display: inline-flex;
+
+}
+
+#list ul li > a{
+    text-decoration: none;
+    color: white;
+    height: inherit;
+    padding: 0 10px;
+    transition: 1s;
+    font-family: 'Fjalla One', sans-serif;
+    letter-spacing: 1px;
+}
+
+#list a:hover{
+    color: black;
+}
+
+/* Animacion de la lista del menu*/
+
+.container .menu-btn.open ~ #list{
+    transition: 1s;
+}
+
+.container .menu-btn.open ~ #list{
+    transform: translateX(20px);
+}
 
 .hero{
     height: 300px;
@@ -95,21 +130,12 @@ body{
     align-items: center;
 }
 
-.header a{
-    color: white;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    height: inherit;
-    padding: 0 10px;
-    transition: 1s;
-}
-
-.header a:hover{
-    color: lightgray;
-}
-
-h1, h2, h3, h4, h5, h6{
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6{
     font-family: 'Fjalla One', sans-serif;
 }
 
@@ -120,6 +146,7 @@ h1{
     letter-spacing: -.3px;
     color: white;
     margin: 0;
+    padding-left: 10px;
 }
 
 h1 b{
@@ -148,7 +175,9 @@ h1 b{
     margin: 0 0 10px 0;
 }
 
-.project-language, .project-date, .project-link{
+.project-language, 
+.project-date, 
+.project-link{
     margin: 10px 0;
 }
 
@@ -213,14 +242,12 @@ h1 b{
     justify-content: space-around;
 }
 
-
 .certification-image{
     border: 1px solid black;
     border-radius: 30px;
     height: 80px;
     width: 143px;
     object-fit: contain;
-
 }
 
 .certification-image:hover{
@@ -316,6 +343,11 @@ h1 b{
     color: white;
     text-align: center;
     padding: 1px;
+}
+
+.logo{
+    display: flex;
+    justify-content: center;
 }
 
 .logo-img{
