modificacion de menu por un menu tipo burger 1.7

--- a/estilo.css
+++ b/estilo.css
@@ -99,6 +99,7 @@ body{
     margin-right: 20px;
     font-family: 'Fjalla One', sans-serif;
     letter-spacing: 1px;
+    transition: .5s;
 }
 
 #list a:hover{
